implemented MVC & Observe

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,9 @@
 
 <body>
 
-    <div class="container">
+    <div id="root"></div>
+
+    <!-- <div class="container">
         <div class="main-inner">
             <div class="place-list">
 
@@ -40,10 +42,10 @@
             </div>
             <button type="submit" class="send-location-btn">Send Location</button>
             <div class="location-form-bottom">
-                <p>Don`t know your location? <a class="find-location-button" type="button">Find it out!</a></p>
+                <p>Don`t know your location? <a class="find-location-button">Find it out!</a></p>
             </div>
         </form>
-    </div>
+    </div> -->
 
 
 
